# Dump2Done

./: .gitignore  README.md  check_env.py  dashboard.py  main.py  pyproject.toml  requirements.txt
configs/: amd_windows_directml.yaml  comfyui_image_to_image_workflow.example.json  default.yaml  intel_windows_openvino.yaml  qualcomm_windows_arm64.yaml
docs/: dashboard_next_steps.md  phase1_architecture.md  qualcomm_platform.md
scripts/: start_dashboard_arm64.ps1
src/dump2done/: __init__.py  cli.py
src/dump2done/asr/: faster_whisper_backend.py
src/dump2done/config/: loader.py
src/dump2done/core/: __init__.py  artifacts.py  job.py
src/dump2done/media/: __init__.py  audio.py  ffprobe.py
src/dump2done/pipeline/: runner.py  selection.py  video_edit.py
src/dump2done/web/: __init__.py  image_providers.py  server.py
